# dagster

./: .env  .gitignore  Dockerfile  README.md  headers.csv  pyproject.toml
dagster_home/.telemetry/: id.yaml
dagster_home/history/: runs.db
dagster_home/history/runs/: 07e766eb-5b94-4de9-8226-75c7299e3b8b.db  12a99c83-b79f-4f4f-9136-4aeb8d94c8f4.db  146dbbff-0a18-448a-8098-8105d1c8bcb3.db  1597887c-5926-4d49-b4fd-3b94d021deda.db  2c404aee-1d2f-4c9f-8d38-2722cc8e50cc.db  2c95f140-9a47-41c0-89ab-108c760a3240.db  319e74c8-8017-4393-9573-860dbf654098.db  378e3b5d-77c0-489f-97fa-2093b62f4fd8.db  43a880d2-7e16-447a-be5f-dbf2898564eb.db  6de85abf-b28f-4ee1-89c7-7b3a92ef812f.db  7ce6ab48-478a-4500-80a4-15fbf7201f4d.db  7ddf5d1f-978a-452b-88c1-7bc577678bce.db  825c868a-dd23-4917-bb81-f829b664d147.db  83e63973-1269-4226-b9a8-ffa85ca3f5e0.db  8b040cd5-3f7f-4ccb-82d0-acc0113456c3.db  91a7758c-4bad-4f4f-85ea-ec907d9a13bd.db  94101d4e-8c29-4c35-ae52-70b0f015548b.db  95d8f773-0054-4661-880c-a24a3f0345e6.db  998fa021-e627-4ad8-a90f-28e0e8731540.db  a95b3932-4aa9-4afa-a4d0-2335a1b15ee0.db  b1f82cdb-64f6-4e8e-bcf7-fb8b975cd56b.db  c971d5d3-39e4-49db-af62-683b4bc64998.db  index.db  (+7 more)
dagster_home/schedules/: schedules.db
etl/: .env  config.py  definitions.py  just_tests.py  others.py  resources.py  tools.py
etl/configs/: mapping.yaml  schema.yaml
etl/data/: test.csv
etl/models/: __init__.py  data_models.py  dwh2.2.dbml  dwh2.2.sql  dwh2.2_latest.sql  minio_model.py  mongo_model.py  pg_model.py
etl/pipelines/: __init__.py  dynamic_pipeline.py  graph.py  ops.py
(+22 files in other folders)
