[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "pymongo",
    "boto3",
    "pandas",
    "sqlalchemy",
    "python-dotenv",
    "openpyxl>=3.1.5, <3.2.0",
    "psycopg2>=2.9, <2.10"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
    "dagit"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "etl.definitions"
code_location_name = "etl"

[tool.setuptools.packages.find]
exclude=["etl_tests"]
where = ["."]
include = ["etl*"]